--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
 	<color name="warning">#FB8C00</color>
 	<color name="launcher_background">#222222</color>
 	<color name="common_green">#81C784</color>
+	<color name="common_yellow">#FFF176</color>
 	<color name="common_red">#E57373</color>
 	<color name="dim2">#C8000000</color>
 	<color name="nsfw_18">#BF360C</color>
