--- a/app/src/main/res/xml/pref_reader.xml
+++ b/app/src/main/res/xml/pref_reader.xml
@@ -120,6 +120,12 @@
 		android:title="@string/keep_screen_on" />
 
 	<SwitchPreferenceCompat
+		android:defaultValue="false"
+		android:key="reader_multitask"
+		android:summary="@string/reader_multitask_summary"
+		android:title="@string/reader_multitask" />
+
+	<SwitchPreferenceCompat
 		android:defaultValue="true"
 		android:key="reader_bar"
 		android:summary="@string/reader_info_bar_summary"
