Scroll timer improvements

--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -12,6 +12,19 @@
 		android:layout_height="match_parent"
 		tools:background="@color/grey" />
 
+	<com.google.android.material.button.MaterialButton
+		android:id="@+id/button_timer"
+		style="?materialIconButtonOutlinedStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:layout_margin="16dp"
+		android:contentDescription="@string/page_switch_timer"
+		android:tooltipText="@string/page_switch_timer"
+		app:backgroundTint="@color/bg_floating_button"
+		app:icon="@drawable/ic_timelapse"
+		app:layout_insetEdge="bottom" />
+
 	<org.koitharu.kotatsu.core.ui.widgets.ZoomControl
 		android:id="@+id/zoomControl"
 		android:layout_width="wrap_content"
