--- a/app/src/main/res/layout-w600dp-land/activity_manga_list.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_manga_list.xml
@@ -17,7 +17,7 @@
 		<com.google.android.material.appbar.MaterialToolbar
 			android:id="@id/toolbar"
 			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
+			android:layout_height="wrap_content"
 			tools:title="Title" />
 
 	</com.google.android.material.appbar.AppBarLayout>
