--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -107,6 +107,7 @@
 
 	<style name="Widget.Kotatsu.RecyclerView" parent="">
 		<item name="android:scrollbarStyle">outsideOverlay</item>
+		<item name="android:clipToPadding">false</item>
 	</style>
 
 	<style name="Widget.Kotatsu.FastScroller" parent="">
