Update color schemes

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,6 +3,7 @@
 
 	<style name="ThemeOverlay.Kotatsu" parent="ThemeOverlay.Material3.Dark">
 		<item name="android:navigationBarColor">@android:color/transparent</item>
+		<item name="android:windowBackground">?android:colorBackground</item>
 	</style>
 
 	<style name="ThemeOverlay.Kotatsu.Amoled" parent="">
