--- a/app/src/main/res/values/themes_colored.xml
+++ b/app/src/main/res/values/themes_colored.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<style name="ThemeOverlay.Kotatsu.Miku" />
+	<style name="ThemeOverlay.Kotatsu.Totoro" />
 
 	<style name="ThemeOverlay.Kotatsu.Asuka" />
+
+	<style name="ThemeOverlay.Kotatsu.Itsuka" />
+
+	<style name="ThemeOverlay.Kotatsu.Kanade" />
+
+	<style name="ThemeOverlay.Kotatsu.Mamimi" />
+
+	<style name="ThemeOverlay.Kotatsu.Miku" />
 
 	<style name="ThemeOverlay.Kotatsu.Mion" />
 
 	<style name="ThemeOverlay.Kotatsu.Rikka" />
 
 	<style name="ThemeOverlay.Kotatsu.Sakura" />
-
-	<style name="ThemeOverlay.Kotatsu.Mamimi" />
 </resources>
