Add option to invert reader navigation controls
Introduces a new setting allowing users to invert navigation controls for page and chapter switching in the reader. Updates preferences, strings, and control logic to support swapping the direction of volume button and tap navigation.

--- a/app/src/main/res/xml/pref_reader.xml
+++ b/app/src/main/res/xml/pref_reader.xml
@@ -75,6 +75,12 @@
 		android:summary="@string/switch_pages_volume_buttons_summary"
 		android:title="@string/switch_pages_volume_buttons" />
 
+	<SwitchPreferenceCompat
+		android:defaultValue="false"
+		android:key="reader_navigation_inverted"
+		android:summary="@string/reader_navigation_inverted_summary"
+		android:title="@string/reader_navigation_inverted" />
+
 	<ListPreference
 		android:entries="@array/reader_animation"
 		android:key="reader_animation2"
