--- a/app/src/main/res/layout/activity_color_filter.xml
+++ b/app/src/main/res/layout/activity_color_filter.xml
@@ -170,15 +170,26 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/textView_contrast" />
 
+			<com.google.android.material.materialswitch.MaterialSwitch
+				android:id="@+id/switch_book"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="8dp"
+				android:text="@string/book_effect"
+				android:textAppearance="?textAppearanceTitleMedium"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/slider_contrast" />
+
 			<Button
 				android:id="@+id/button_reset"
 				style="?materialButtonOutlinedStyle"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_marginTop="8dp"
+				android:layout_marginTop="16dp"
 				android:text="@string/reset"
 				app:layout_constraintEnd_toEndOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/slider_contrast" />
+				app:layout_constraintTop_toBottomOf="@id/switch_book" />
 
 		</androidx.constraintlayout.widget.ConstraintLayout>
 
