Fix login autofill (closes #1469)

--- a/app/src/main/res/layout/activity_kitsu_auth.xml
+++ b/app/src/main/res/layout/activity_kitsu_auth.xml
@@ -45,7 +45,7 @@
 			android:id="@+id/edit_email"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:autofillHints="emailAddress"
+			android:autofillHints="username"
 			android:hint="@string/email"
 			android:imeOptions="actionNext"
 			android:inputType="textEmailAddress"
