--- a/app/src/main/res/layout/activity_sync_auth.xml
+++ b/app/src/main/res/layout/activity_sync_auth.xml
@@ -63,7 +63,7 @@
 			android:id="@+id/edit_email"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:autofillHints="emailAddress"
+			android:autofillHints="username"
 			android:imeOptions="actionDone"
 			android:inputType="textEmailAddress"
 			android:singleLine="true"
