Update Miku theme #1490

--- a/app/src/main/res/values-night/colors_themed.xml
+++ b/app/src/main/res/values-night/colors_themed.xml
@@ -241,53 +241,53 @@
 	<color name="mamimi_surfaceContainerHigh">#282A2F</color>
 	<color name="mamimi_surfaceContainerHighest">#33353A</color>
 	<!-- Miku -->
-	<color name="miku_primary">#8FCEF3</color>
-	<color name="miku_onPrimary">#003549</color>
-	<color name="miku_primaryContainer">#004C69</color>
-	<color name="miku_onPrimaryContainer">#C3E8FF</color>
-	<color name="miku_secondary">#86D1E9</color>
-	<color name="miku_onSecondary">#003641</color>
-	<color name="miku_secondaryContainer">#004E5E</color>
-	<color name="miku_onSecondaryContainer">#B1ECFF</color>
-	<color name="miku_tertiary">#80D4D6</color>
-	<color name="miku_onTertiary">#003738</color>
-	<color name="miku_tertiaryContainer">#004F51</color>
-	<color name="miku_onTertiaryContainer">#9CF1F2</color>
+	<color name="miku_primary">#6FDDE2</color>
+	<color name="miku_onPrimary">#003739</color>
+	<color name="miku_primaryContainer">#50C1C6</color>
+	<color name="miku_onPrimaryContainer">#004C4F</color>
+	<color name="miku_secondary">#A6CECF</color>
+	<color name="miku_onSecondary">#0C3638</color>
+	<color name="miku_secondaryContainer">#294F51</color>
+	<color name="miku_onSecondaryContainer">#98C0C1</color>
+	<color name="miku_tertiary">#E4BEFF</color>
+	<color name="miku_onTertiary">#431E60</color>
+	<color name="miku_tertiaryContainer">#CBA0EB</color>
+	<color name="miku_onTertiaryContainer">#583375</color>
 	<color name="miku_error">#FFB4AB</color>
 	<color name="miku_onError">#690005</color>
 	<color name="miku_errorContainer">#93000A</color>
 	<color name="miku_onErrorContainer">#FFDAD6</color>
-	<color name="miku_background">#0F1417</color>
-	<color name="miku_onBackground">#DFE3E7</color>
-	<color name="miku_surface">#0F1417</color>
-	<color name="miku_onSurface">#DFE3E7</color>
-	<color name="miku_surfaceVariant">#41484D</color>
-	<color name="miku_onSurfaceVariant">#C0C7CD</color>
-	<color name="miku_outline">#8A9297</color>
-	<color name="miku_outlineVariant">#41484D</color>
+	<color name="miku_background">#0F1415</color>
+	<color name="miku_onBackground">#DEE3E3</color>
+	<color name="miku_surface">#0F1415</color>
+	<color name="miku_onSurface">#DEE3E3</color>
+	<color name="miku_surfaceVariant">#3D4949</color>
+	<color name="miku_onSurfaceVariant">#BCC9C9</color>
+	<color name="miku_outline">#879393</color>
+	<color name="miku_outlineVariant">#3D4949</color>
 	<color name="miku_scrim">#000000</color>
-	<color name="miku_inverseSurface">#DFE3E7</color>
-	<color name="miku_inverseOnSurface">#2C3134</color>
-	<color name="miku_inversePrimary">#1C6585</color>
-	<color name="miku_primaryFixed">#C3E8FF</color>
-	<color name="miku_onPrimaryFixed">#001E2C</color>
-	<color name="miku_primaryFixedDim">#8FCEF3</color>
-	<color name="miku_onPrimaryFixedVariant">#004C69</color>
-	<color name="miku_secondaryFixed">#B1ECFF</color>
-	<color name="miku_onSecondaryFixed">#001F27</color>
-	<color name="miku_secondaryFixedDim">#86D1E9</color>
-	<color name="miku_onSecondaryFixedVariant">#004E5E</color>
-	<color name="miku_tertiaryFixed">#9CF1F2</color>
-	<color name="miku_onTertiaryFixed">#002020</color>
-	<color name="miku_tertiaryFixedDim">#80D4D6</color>
-	<color name="miku_onTertiaryFixedVariant">#004F51</color>
-	<color name="miku_surfaceDim">#0F1417</color>
-	<color name="miku_surfaceBright">#353A3D</color>
-	<color name="miku_surfaceContainerLowest">#0A0F12</color>
-	<color name="miku_surfaceContainerLow">#181C1F</color>
-	<color name="miku_surfaceContainer">#1C2023</color>
-	<color name="miku_surfaceContainerHigh">#262B2E</color>
-	<color name="miku_surfaceContainerHighest">#313539</color>
+	<color name="miku_inverseSurface">#DEE3E3</color>
+	<color name="miku_inverseOnSurface">#2C3132</color>
+	<color name="miku_inversePrimary">#00696D</color>
+	<color name="miku_primaryFixed">#87F3F8</color>
+	<color name="miku_onPrimaryFixed">#002021</color>
+	<color name="miku_primaryFixedDim">#69D7DC</color>
+	<color name="miku_onPrimaryFixedVariant">#004F52</color>
+	<color name="miku_secondaryFixed">#C2EAEC</color>
+	<color name="miku_onSecondaryFixed">#002021</color>
+	<color name="miku_secondaryFixedDim">#A6CECF</color>
+	<color name="miku_onSecondaryFixedVariant">#274D4E</color>
+	<color name="miku_tertiaryFixed">#F2DAFF</color>
+	<color name="miku_onTertiaryFixed">#2D044A</color>
+	<color name="miku_tertiaryFixedDim">#E0B6FF</color>
+	<color name="miku_onTertiaryFixedVariant">#5B3679</color>
+	<color name="miku_surfaceDim">#0F1415</color>
+	<color name="miku_surfaceBright">#353A3A</color>
+	<color name="miku_surfaceContainerLowest">#0A0F0F</color>
+	<color name="miku_surfaceContainerLow">#171D1D</color>
+	<color name="miku_surfaceContainer">#1B2121</color>
+	<color name="miku_surfaceContainerHigh">#262B2B</color>
+	<color name="miku_surfaceContainerHighest">#303636</color>
 	<!-- Mion -->
 	<color name="mion_primary">#A1D39A</color>
 	<color name="mion_onPrimary">#09390F</color>
