--- a/app/src/main/res/values/colors_themed.xml
+++ b/app/src/main/res/values/colors_themed.xml
@@ -241,53 +241,53 @@
 	<color name="mamimi_surfaceContainerHigh">#E8E7EF</color>
 	<color name="mamimi_surfaceContainerHighest">#E2E2E9</color>
 	<!-- Miku -->
-	<color name="miku_primary">#1C6585</color>
+	<color name="miku_primary">#00696D</color>
 	<color name="miku_onPrimary">#FFFFFF</color>
-	<color name="miku_primaryContainer">#C3E8FF</color>
-	<color name="miku_onPrimaryContainer">#004C69</color>
-	<color name="miku_secondary">#00677C</color>
+	<color name="miku_primaryContainer">#50C1C6</color>
+	<color name="miku_onPrimaryContainer">#004C4F</color>
+	<color name="miku_secondary">#3F6566</color>
 	<color name="miku_onSecondary">#FFFFFF</color>
-	<color name="miku_secondaryContainer">#B1ECFF</color>
-	<color name="miku_onSecondaryContainer">#004E5E</color>
-	<color name="miku_tertiary">#00696B</color>
+	<color name="miku_secondaryContainer">#BFE7E9</color>
+	<color name="miku_onSecondaryContainer">#43696B</color>
+	<color name="miku_tertiary">#744E92</color>
 	<color name="miku_onTertiary">#FFFFFF</color>
-	<color name="miku_tertiaryContainer">#9CF1F2</color>
-	<color name="miku_onTertiaryContainer">#004F51</color>
+	<color name="miku_tertiaryContainer">#CBA0EB</color>
+	<color name="miku_onTertiaryContainer">#583375</color>
 	<color name="miku_error">#BA1A1A</color>
 	<color name="miku_onError">#FFFFFF</color>
 	<color name="miku_errorContainer">#FFDAD6</color>
 	<color name="miku_onErrorContainer">#93000A</color>
-	<color name="miku_background">#F6FAFE</color>
-	<color name="miku_onBackground">#181C1F</color>
-	<color name="miku_surface">#F6FAFE</color>
-	<color name="miku_onSurface">#181C1F</color>
-	<color name="miku_surfaceVariant">#DCE3E9</color>
-	<color name="miku_onSurfaceVariant">#41484D</color>
-	<color name="miku_outline">#71787D</color>
-	<color name="miku_outlineVariant">#C0C7CD</color>
+	<color name="miku_background">#F5FAFA</color>
+	<color name="miku_onBackground">#171D1D</color>
+	<color name="miku_surface">#F5FAFA</color>
+	<color name="miku_onSurface">#171D1D</color>
+	<color name="miku_surfaceVariant">#D8E5E5</color>
+	<color name="miku_onSurfaceVariant">#3D4949</color>
+	<color name="miku_outline">#6D797A</color>
+	<color name="miku_outlineVariant">#BCC9C9</color>
 	<color name="miku_scrim">#000000</color>
-	<color name="miku_inverseSurface">#2C3134</color>
-	<color name="miku_inverseOnSurface">#EDF1F5</color>
-	<color name="miku_inversePrimary">#8FCEF3</color>
-	<color name="miku_primaryFixed">#C3E8FF</color>
-	<color name="miku_onPrimaryFixed">#001E2C</color>
-	<color name="miku_primaryFixedDim">#8FCEF3</color>
-	<color name="miku_onPrimaryFixedVariant">#004C69</color>
-	<color name="miku_secondaryFixed">#B1ECFF</color>
-	<color name="miku_onSecondaryFixed">#001F27</color>
-	<color name="miku_secondaryFixedDim">#86D1E9</color>
-	<color name="miku_onSecondaryFixedVariant">#004E5E</color>
-	<color name="miku_tertiaryFixed">#9CF1F2</color>
-	<color name="miku_onTertiaryFixed">#002020</color>
-	<color name="miku_tertiaryFixedDim">#80D4D6</color>
-	<color name="miku_onTertiaryFixedVariant">#004F51</color>
-	<color name="miku_surfaceDim">#D6DADF</color>
-	<color name="miku_surfaceBright">#F6FAFE</color>
+	<color name="miku_inverseSurface">#2C3132</color>
+	<color name="miku_inverseOnSurface">#EDF2F1</color>
+	<color name="miku_inversePrimary">#69D7DC</color>
+	<color name="miku_primaryFixed">#87F3F8</color>
+	<color name="miku_onPrimaryFixed">#002021</color>
+	<color name="miku_primaryFixedDim">#69D7DC</color>
+	<color name="miku_onPrimaryFixedVariant">#004F52</color>
+	<color name="miku_secondaryFixed">#C2EAEC</color>
+	<color name="miku_onSecondaryFixed">#002021</color>
+	<color name="miku_secondaryFixedDim">#A6CECF</color>
+	<color name="miku_onSecondaryFixedVariant">#274D4E</color>
+	<color name="miku_tertiaryFixed">#F2DAFF</color>
+	<color name="miku_onTertiaryFixed">#2D044A</color>
+	<color name="miku_tertiaryFixedDim">#E0B6FF</color>
+	<color name="miku_onTertiaryFixedVariant">#5B3679</color>
+	<color name="miku_surfaceDim">#D6DBDB</color>
+	<color name="miku_surfaceBright">#F5FAFA</color>
 	<color name="miku_surfaceContainerLowest">#FFFFFF</color>
-	<color name="miku_surfaceContainerLow">#F0F4F8</color>
-	<color name="miku_surfaceContainer">#EAEEF2</color>
-	<color name="miku_surfaceContainerHigh">#E5E9ED</color>
-	<color name="miku_surfaceContainerHighest">#DFE3E7</color>
+	<color name="miku_surfaceContainerLow">#F0F4F4</color>
+	<color name="miku_surfaceContainer">#EAEFEE</color>
+	<color name="miku_surfaceContainerHigh">#E4E9E9</color>
+	<color name="miku_surfaceContainerHighest">#DEE3E3</color>
 	<!-- Mion -->
 	<color name="mion_primary">#3B693A</color>
     <color name="mion_onPrimary">#FFFFFF</color>
