Discord RPC improvements

--- a/app/src/main/res/xml/pref_discord.xml
+++ b/app/src/main/res/xml/pref_discord.xml
@@ -14,4 +14,10 @@
 		android:summary="@string/discord_token_summary"
 		android:title="@string/discord_token" />
 
+	<SwitchPreferenceCompat
+		android:dependency="discord_rpc"
+		android:key="discord_rpc_skip_nsfw"
+		android:summary="@string/rpc_skip_nsfw_summary"
+		android:title="@string/disable_nsfw" />
+
 </androidx.preference.PreferenceScreen>
