--- a/app/src/main/res/xml/pref_services.xml
+++ b/app/src/main/res/xml/pref_services.xml
@@ -70,7 +70,7 @@
 	</PreferenceCategory>
 
 	<Preference
-		android:fragment="org.koitharu.kotatsu.settings.DiscordSettingsFragment"
+		android:fragment="org.koitharu.kotatsu.settings.discord.DiscordSettingsFragment"
 		android:key="discord_rpc"
 		android:summary="@string/discord_rpc_summary"
 		android:title="@string/discord_rpc"
