--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -11,6 +11,7 @@
 	<color name="common_yellow">#FFF176</color>
 	<color name="common_red">#E57373</color>
 	<color name="dim2">#C8000000</color>
+	<color name="dim_lite">#66FFFFFF</color>
 	<color name="nsfw_18">#BF360C</color>
 	<color name="nsfw_16">#FF6F00</color>
 
