--- a/app/src/main/res/xml/pref_backup_periodic.xml
+++ b/app/src/main/res/xml/pref_backup_periodic.xml
@@ -2,6 +2,7 @@
 <androidx.preference.PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:title="@string/periodic_backups">
 
 	<SwitchPreferenceCompat
@@ -48,31 +49,39 @@
 		android:persistent="false"
 		android:selectable="false"
 		app:isPreferenceVisible="false" />
-	
-	<SwitchPreferenceCompat
-		android:defaultValue="false"
-		android:dependency="backup_periodic"
-		android:key="backup_periodic_tg_enabled"
-		android:title="@string/send_backups_telegram"
-		app:allowDividerAbove="true" />
 
-	<EditTextPreference
-		android:dependency="backup_periodic_tg_enabled"
-		android:inputType="text"
-		android:key="backup_periodic_tg_chat_id"
-		android:title="@string/telegram_chat_id" />
-		
-	<Preference
-		android:dependency="backup_periodic_tg_enabled"
-		android:key="backup_periodic_tg_open"
-		android:persistent="false"
-		android:summary="@string/open_telegram_bot_summary"
-		android:title="@string/open_telegram_bot" />
-		
-	<Preference
-		android:dependency="backup_periodic_tg_enabled"
-		android:key="backup_periodic_tg_test"
-		android:persistent="false"
-		android:title="@string/test_connection" />
+	<PreferenceCategory
+		android:title="@string/telegram_integration"
+		app:isPreferenceVisible="false"
+		android:key="backup_periodic_tg"
+		tools:isPreferenceVisible="true">
+
+		<SwitchPreferenceCompat
+			android:defaultValue="false"
+			android:dependency="backup_periodic"
+			android:key="backup_periodic_tg_enabled"
+			android:title="@string/send_backups_telegram"
+			app:allowDividerAbove="true" />
+
+		<EditTextPreference
+			android:dependency="backup_periodic_tg_enabled"
+			android:inputType="text"
+			android:key="backup_periodic_tg_chat_id"
+			android:title="@string/telegram_chat_id" />
+
+		<Preference
+			android:dependency="backup_periodic_tg_enabled"
+			android:key="backup_periodic_tg_open"
+			android:persistent="false"
+			android:summary="@string/open_telegram_bot_summary"
+			android:title="@string/open_telegram_bot" />
+
+		<Preference
+			android:dependency="backup_periodic_tg_enabled"
+			android:key="backup_periodic_tg_test"
+			android:persistent="false"
+			android:title="@string/test_connection" />
+
+	</PreferenceCategory>
 
 </androidx.preference.PreferenceScreen>
